# research-agent

./: README.md  amber-manifest.json5  pyproject.toml
src/: agent.py  debug_local_submission.py  executor.py  local_submission_check.csv  messenger.py  server.py
src/purple_agent/: __init__.py  features.py  io_bundle.py  modeling.py  submission.py
tests/: test_agent.py
